--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -13,12 +13,15 @@
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "animate.css": "^4.1.1",
     "autoprefixer": "^9.8.8",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "tiny-emitter": "^2.1.0",
+    "vee-validate": "^4.5.8",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-toastification": "^2.0.0-beta.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
